--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -193,16 +193,17 @@ button.btn-mobile-navbar.btn-mobile-navbar-left {
     margin-left: -15px;
 }
 
-
-.dropdown.open > ul.dropdown-menu {
+/* .dropdown.open > ul.notification-dropdown
+{
     display: table-caption;
+} */
+
+.notification-dropdown > li.dropdown-horizontal-group
+{
+    display: inline-flex;
+    justify-content: space-between;
+    width: 100%;
 }
-
-.dropdown.open > ul.dropdown-menu > li.dropdown-horizontal-group {
-    display: inline-flex !important;
-}
-
-
 
 .navbar-mobile-xp > li > a, .navbar-nav > li.navbar-xp > a {
     padding-top: 14px;
