use custom text config in submission approval templates

--- a/src/quest_manager/templates/quest_manager/buttons_approvals.html
+++ b/src/quest_manager/templates/quest_manager/buttons_approvals.html
@@ -12,7 +12,7 @@
         title='RETURN this quest to the student without accepting it'>
         <i class="fa fa-fw fa-times"></i></button>
     <a class="btn btn-warning" data-target="#quick_reply{{s.id}}" id= "btn_quick_text{{s.id}}" role="button"
-       title='ADD TEXT: "Please read the submission instructions more carefully. Thanks!"'>
+       title='ADD TEXT: "{{ quick_reply_text }}"'>
        <i class="fa fa-fw fa-commenting-o fa-flip-horizontal"></i></a>
   </div>
   <div class="btn-group" role="group">
