--- a/src/quest_manager/templates/quest_manager/quest_approval.html
+++ b/src/quest_manager/templates/quest_manager/quest_approval.html
@@ -57,7 +57,7 @@
 <script>
 $( document ).ready(function() {
     $('[id^=btn_quick_text]').on('click', function () {
-        var msg = ' Please read the submission instructions more carefully. Thanks! ';
+        var msg = ' {{ quick_reply_text }} ';
         var textarea = $($(this).data('target')).find('textarea');
         textarea.val(textarea.val() + msg);
     });
