--- a/src/quest_manager/templates/quest_manager/quest_approval.html
+++ b/src/quest_manager/templates/quest_manager/quest_approval.html
@@ -66,4 +66,6 @@ $( document ).ready(function() {
 
 {% include "quest_manager/ajax_content_loading.html" %}
 
+{% include "quest_manager/snippets/flag_submissions_scripts.html" %}
+
 {% endblock %}
