--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -116,6 +116,8 @@
             });
 
             setInterval(save_draft, 60000); // autosave every 60 seconds
+
+
         });
 
         function save_draft() {
@@ -162,7 +164,7 @@
                 });
             }
 
-        };
+        }  
 
         function hide_check_show_text() {
           // after success, animate a check mark, then put text back
@@ -174,9 +176,11 @@
               )
             });
           });
-        };
+        }
 
     </script>
+
+    {% include 'quest_manager/snippets/flag_submissions_scripts.html' %}
 
     {% if request.user.is_staff %} {# styling for the badge awarding widget #}
     <script>
