--- a/src/templates/postman/email_user.html
+++ b/src/templates/postman/email_user.html
@@ -5,13 +5,13 @@
 <body>
 <p>Hello {{object.recipient.profile.get_preferred_name}},</p>
 
-<p>You received a <a href="https://{{ site.name }}/{{ object.get_absolute_url }}">new message</a> from {{ object.sender.profile }}.</p>
+<p>You received a <a href="https://{{ site.domain }}{{ object.get_absolute_url }}">new message</a> from {{ object.sender.profile }}.</p>
 
 
 <p>Have a day!</p>
 <p>Love, Hackerspace AI</p>
 
-{% comment %} <p><img alt="[Logo]" src="{% site_logo_url %}"></p> {% endcomment %}
+<p><img alt="[Logo]" src="https://{{ site.domain }}{% site_logo_url %}"></p>
 <p>If you no longer want to receive these emails, edit your profile settings</p>
 </body>
 </html>
