--- a/src/announcements/templates/announcements/email_announcement.html
+++ b/src/announcements/templates/announcements/email_announcement.html
@@ -20,6 +20,6 @@ I take no responsibility for how the announcement looks in this email!</p>
 <p>Have a day!</p>
 <p>Love, Hackerspace AI</p>
 
-<p><img alt="[Logo]" src="{% site_logo_url %}"></p>
+<p><img alt="[Logo]" src="{% site_logo_url_full %}"></p>
 <p>If you no longer want to receive these emails, edit your profile settings on the website.</p>
 </body>
