load staticfiles > load static deprecation

--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -1,6 +1,6 @@
 {% extends "badges/base.html" %}
 {% load crispy_forms_tags %}
-{% load staticfiles %}
+{% load static %}
 
 {% block heading_inner %}{{heading}}
 {% if request.user.is_staff %}
