--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!-- ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 {#<script#}
