--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -5,7 +5,7 @@
 
 <!-- Fixed navbar -->
 <nav class="navbar navbar-default navbar-fixed-top"
-{% if not user.is_anonymous %}style='{% color_style_from_mark user.profile.dark_theme %}'{% endif %}>
+{% if request.user.is_authenticated %}style='{% color_style_from_mark request.user %}'{% endif %}>
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
