--- a/src/courses/templates/courses/mark_calculations.html
+++ b/src/courses/templates/courses/mark_calculations.html
@@ -48,7 +48,7 @@
             ">
                 <strong>{{ xp_per_course|floatformat }}</strong> XP</a> per course.
             {% else %}
-              So far, you have earned <strong>{{ obj.user.profile.xp }}</strong> XP in your course.
+              So far, you have earned <strong>{{ user.profile.xp_cached }}</strong> XP in your course.
             {% endif %}
           </li>
           <li>We are currently
