Clearfix headings; fixes #225

--- a/src/templates/base_sidebar.html
+++ b/src/templates/base_sidebar.html
@@ -14,7 +14,7 @@
     </nav>
     <div class="col-xs-12 col-sm-9" id="main"> <!-- These settings need to compliment the sidebar settings -->
         {% block pre_heading %}{% endblock %}
-        <h1>{% block heading %}{% endblock %}</h1>
+        <h1 class="clearfix">{% block heading %}{% endblock %}</h1>
         {% block postman_menu %}{% endblock %}
         {% block content %}{% endblock %}
     </div>
