clearfix completed quests list in profile; fixes #244

--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -162,7 +162,7 @@
          <div class="list-group-item list-group-item-info">Completed</div>
          {% if completed_submissions %}
            {% for s in completed_submissions %}
-             <a href="{{s.get_absolute_url}}" class="list-group-item list-group-item-packed
+             <a href="{{s.get_absolute_url}}" class="list-group-item list-group-item-packed clearfix
                  {% if s.is_awaiting_approval %}list-group-item-warning
                  {% elif s.game_lab_transfer %}list-group-item-muted
                  {% endif %}">
