--- a/src/announcements/templates/announcements/email_announcement.html
+++ b/src/announcements/templates/announcements/email_announcement.html
@@ -6,7 +6,7 @@
 <p>Hello,</p>
 
 <p>A new announcement was just published!  To view it in all its proper glory with images and videos and stuff, 
-<a target="_blank" href="{{url}}">view it online here.</a> 
+<a target="_blank" href="https://{{ domain }}{{ absolute_url }}">view it online here.</a> 
 I take no responsibility for how the announcement looks in this email!</p>
 
 <hr>
@@ -20,6 +20,6 @@ I take no responsibility for how the announcement looks in this email!</p>
 <p>Have a day!</p>
 <p>Love, Hackerspace AI</p>
 
-<p><img alt="[Logo]" src="{% site_logo_url_full %}"></p>
+<p><img alt="[Logo]" src="https://{{ domain }}{% site_logo_url %}"></p>
 <p>If you no longer want to receive these emails, edit your profile settings on the website.</p>
 </body>
