--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -495,7 +495,10 @@ iframe.summernotewidget.form-control {
 }
 
 .form-group-summernote, .panel-summernote #div_id_docfile,
-.panel-summernote #div_id_files, .panel-summernote #div_id_award, .panel-summernote #div_id_awards {
+.panel-summernote #div_id_files,
+.panel-summernote #div_id_attachments,
+.panel-summernote #div_id_award, 
+.panel-summernote #div_id_awards {
     margin-left: 15px;
     margin-right: 15px;
 }
