--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -19,6 +19,22 @@ ul.left-aligned, ol.left-aligned {
     line-height: 1.2;
 }
 
+/* offset anchor links for fixed header */
+.anchor {
+    scroll-margin-top: 60px;
+} 
+
+.anchor:target {
+    animation: temporaryHighlight 2s;
+}
+
+@keyframes temporaryHighlight {
+    0% { background: gold }
+    50% { background: gold }
+    100% { background: inherit }
+}
+
+
 
 /********** Figures ****************/
 
@@ -271,13 +287,6 @@ iframe, .embed-responsive video {
     border-radius: 8px;
 }
 
-/*move anchor targets down so not covered by ifxed header*/
-:target:before {
-    content: "";
-    display: block;
-    height: 60px; /* fixed header height*/
-    margin: -60px 0 0; /* negative fixed header height */
-}
 
 /********* EMOJI ************************/
 img.emoji-img-inline {
