highlight selected announcement; dark theme highlight

--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -171,3 +171,11 @@ a.list-group-item-muted {
     border-color: #DDD !important;
     color: #555;
 }
+
+/* COMMENT and annoucnement higlights */ 
+
+@keyframes temporaryHighlight {
+    0% { background:  gold}
+    50% { background: gold }
+    100% { background: inherit }
+}
