--- a/src/announcements/templates/announcements/list.html
+++ b/src/announcements/templates/announcements/list.html
@@ -10,8 +10,9 @@
 {% block content %}
 <div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
 {% for object in object_list %}
-  <div class="panel accordian
-    {% if object.id == active_id %} active {% endif %}
+  <div id="{{object.id}}" 
+    class="panel accordian anchor
+    {% if object.id == active_id %} active active-anchor{% endif %}
     {% if object|notification_unread:request.user %}panel-warning note-unread
     {% elif object.not_yet_released %}panel-warning
     {% elif object.draft %}panel-warning
@@ -34,14 +35,16 @@
         {% if object.sticky %}<i class="fa fa-exclamation-circle">&nbsp;</i>{% endif %}
         {{object.title}}
         <!-- </a> -->
-        <small class="pull-right">{{object.datetime_released.date|date:'D, N j, Y'}}</small>
+        <small class="pull-right">{{object.datetime_released.date|date:'D, N j, Y'}}
+          <a href="{{object.get_absolute_url}}#{{object.id}}" title="Link to this announcement" class="text-muted"><i class="fa fa-link"></i></a>
+        </small>
       </h4>
     </div>
     <div id="collapse{{object.id}}"
       class="panel-collapse collapse {% if object.id == active_id %} in {% endif %}"
       role="tabpanel" aria-labelledby="heading{{object.id}}">
       <ul class="list-group">
-        <li class="list-group-item">
+        <li class="list-group-item announcement-content">
           {% if request.user.is_staff %}
           <div class="announcement-button-group">
             <a class="btn btn-danger" href="{% url 'announcements:delete' object.id %}" role="button">Delete</a>
