consistant labels for Submission Instructions

--- a/src/quest_manager/templates/quest_manager/preview_content_approvals.html
+++ b/src/quest_manager/templates/quest_manager/preview_content_approvals.html
@@ -13,7 +13,7 @@
     </div>
 
 </li>
-<li class="list-group-item list-group-item-info">Submission Details</li>
+<li class="list-group-item list-group-item-info">Submission Instructions</li>
 <li class="list-group-item">{{s.quest.submission_details|safe}}</li>
 <li class="list-group-item list-group-item-info">Instructor Notes</li>
 <li class="list-group-item">{{s.quest.instructor_notes|safe}}
