--- a/src/quest_manager/templates/quest_manager/preview_content_approvals.html
+++ b/src/quest_manager/templates/quest_manager/preview_content_approvals.html
@@ -21,6 +21,9 @@
         <hr><p>* <b>{{ s.quest.specific_teacher_to_notify }}</b> was notified about this quest submission.</p>
     {% endif %}
 </li>
+{% with s as submission %}
+    {% include "quest_manager/snippets/previous_submission.html" %}
+{% endwith %}
 <li class="list-group-item list-group-item-info">Submission Comments</li>
 {% with s.get_comments as target_comments %}
     {% include "comments/comments.html" %}
