--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -13,11 +13,11 @@
                 </p>
             </div>
             <div class='col-sm-6'>
-                <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">
+                <a href="https://www.gnu.org/licenses/quick-guide-gplv3.html">
                     <img style="width:50px;" class="pull-right" src="{% static 'img/GNU.png' %}"/>
                 </a>
                 <p class='text-muted'>The code that runs this site is free and open source.
-                    It uses the <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">GNU GPL v2
+                    It uses the <a href="https://www.gnu.org/licenses/quick-guide-gplv3.html">GNU GPL v3
                         license</a> and is available to anyone for free through
                     <a href="https://github.com/timberline-secondary/hackerspace">Github</a>. You are free to download,
                     modify, and distribute the code as long as you share it in the same manner!
