--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -217,6 +217,7 @@
                 <div class="input-group input-group-unified input-group-sm">
                     <input type="text" class="form-control" name="login" placeholder="Username" autofocus />
                     <input type="password" class="form-control" name="password" placeholder="Password"/>
+                    <input type='hidden' name="next" value="{{ request.GET.next }}">
               <span class="input-group-btn">
                 <button type="submit" class="btn btn-default">Sign In</button>
               </span>
