--- a/src/templates/flatpages/default.html
+++ b/src/templates/flatpages/default.html
@@ -14,9 +14,11 @@
   </div>
   <h1>{{ flatpage.title }}
     <i class="pull-right fa fa-file-text-o"></i>
+    {% if user.is_staff %}
     <a class="btn btn-info btn-sm" href="/admin/flatpages/flatpage/{{ flatpage.id }}/change/" role="button"
       title = "Edit this page" >
       <i class="fa fa-edit"></i></a>
+    {% endif %}
   </h1>
   {{ flatpage.content }}
 {% endblock %}
