--- a/src/djcytoscape/templates/djcytoscape/detail.html
+++ b/src/djcytoscape/templates/djcytoscape/detail.html
@@ -23,15 +23,14 @@
 
 {%  endblock %}
 {% block js %}
-<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script>
+    window.jQuery || document.write('<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"><\/script>')
+</script>
+{% comment %} <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script> {% endcomment %}
 <script src="{% static 'djcytoscape/js/cytoscape.min.js' %}"></script>
 
-<script src="{% static 'djcytoscape/js/dagre.js' %}"></script>
+<script src="{% static 'djcytoscape/js/dagre.min.js' %}"></script>
 <script src="{% static 'djcytoscape/js/cytoscape-dagre.js' %}"></script>
-
-<script src="{% static 'djcytoscape/js/cola.v3.min.js' %}"></script>
-<script src="{% static 'djcytoscape/js/cytoscape-cola.js' %}"></script>
-
 
 <script>
     var cy = {{ cytoscape_json|safe }}
