--- a/src/quest_manager/templates/quest_manager/quest_form.html
+++ b/src/quest_manager/templates/quest_manager/quest_form.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
-  <a href="{% url 'quests:quests' %}" role="button" class="btn btn-danger">Cancel</a>
+  <a href="{{ cancel_url }}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
   <a href="/admin/quest_manager/quest/{{object.id}}"
      title="This is required to edit prerequisites"
