--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -55,14 +55,14 @@
         {% if courses %}
           {% for course in courses %}
             {% if course.semester.active %}
-              <div class="pull-right"> {{xp_per_course|floatformat:0}} | 1000</div>
+              <div class="pull-right"> {{xp_per_course|floatformat:0}} | {{course.course.xp_for_100_percent}} </div>
               <div>
                   {{course.course}} {{course.grade_fk}}
               </div>
               <div class="progress progress-xp"><!--&nbsp; {% widthratio xp_per_course 1000 100 %}&#37;-->
                 <div class="progress-bar" role="progressbar" aria-valuenow="{{xp_per_course}}" aria-valuemin="0" aria-valuemax="1000"
-                    style="width: {% widthratio xp_per_course 1000 100 %}%;">
-                  <span class="sr-only">{% widthratio xp_per_course 1000 100 %}% Complete</span>
+                    style="width: {% widthratio xp_per_course course.course.xp_for_100_percent 100 %}%;">
+                  <span class="sr-only">{% widthratio xp_per_course course.course.xp_for_100_percent 100 %}% Complete</span>
                 </div>
               </div>
             {% endif %}
