--- a/src/comments/templates/comments/comments.html
+++ b/src/comments/templates/comments/comments.html
@@ -31,9 +31,9 @@
           Current Mark: {{comment.user.profile.mark|floatformat:0}}%)
           </small>
           {% else %}
-          {{comment.user}}
+            {% firstof comment.user.profile.alias comment.user %}
           {% endif %}
-          <small>&ndash; {{comment.timestamp|timesince}} ago 
+          <small>&ndash; {{comment.timestamp|timesince}} ago
             <a href="{{comment.path}}" title="Link to this comment" class="text-muted"><i class="fa fa-link"></i></a>
           </small>
           {% if comment.flagged %} FLAGGED (students can't see this comment) {% endif %}
