add context_processor and update templates.  Closes #340

--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -27,7 +27,7 @@
   {% elif request.user.is_staff or semester.is_open and request.user.profile.has_current_course %}
     <div class="panel panel-primary">
       <div class="panel-heading" title="This section is only visible to you">
-        How to get XP by helping to improve the {{ config.hs_site_name_short }}.
+        How to get XP by helping to improve the {{ config.site_name_short }}.
       </div>
       <div class="panel-body">
         <p>Look through the list of suggestions below and vote on those you like or dislike by
