--- a/src/templates/banner.html
+++ b/src/templates/banner.html
@@ -2,5 +2,5 @@
 {% load utility_tags %}
 <img id="banner"
      src="{% banner_url %}"
-     class="img img-rounded img-responsive" alt="{{ config.hs_site_name }} Banner"
+     class="img img-rounded img-responsive" alt="{{ config.site_name }} Banner"
 />
