--- a/src/templates/intro_tour.html
+++ b/src/templates/intro_tour.html
@@ -11,7 +11,7 @@ $(document).ready(function() {
         backdrop: true,
         title: "Welcome!",
         content: "<p>Now that you've successfully registered with \
-        <b>{{ config.hs_site_name }} - Online</b>, \
+        <b>{{ config.site_name }} - Online</b>, \
         I've prepared a tour to show you around.</p> \
         <p>Use the buttons below to navigate through the tour.</p> \
         <p>If you grow weary of my tour, you can hit the <em>End Tour</em> button, \
@@ -46,7 +46,7 @@ $(document).ready(function() {
         element: "#navbar",
         placement: 'bottom',
         title: "Hackerspace - Online",
-        content: "<p>{{ config.hs_site_name }} - Online uses a form of <strong>gamification</strong>:</p> \
+        content: "<p>{{ config.site_name }} - Online uses a form of <strong>gamification</strong>:</p> \
         <blockquote><dl> \
           <dt>gam·i·fi·ca·tion</dt> \
           <dd><small>the application of typical elements of game playing (e.g., \
@@ -61,7 +61,7 @@ $(document).ready(function() {
         // backdrop: true,
         element: "#navbar",
         placement: 'bottom',
-        title: "{{ config.hs_site_name_short }} - Online",
+        title: "{{ config.site_name_short }} - Online",
         content: "<p>Your lessons and assignments will be given in the form of <b>Quests</b>. \
         When you complete a quest, you will be given experience points (XP) instead of marks. \
         Instead of completing a Unit, you will embark on a <b>Campaign</b>.</p>\
